# dev-toolkit

./: README.md
AllAlgorithms/: 01_linear_search.py
AllProblemSolvingPatterns/: 01_two_pointers.py
postgresql-mcp/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml  setup.sh
postgresql-mcp/docs/: SETUP.md
postgresql-mcp/postgresql_mcp/: __init__.py  config.py  db_pool.py  nl_to_sql.py  sql_validator.py
postgresql-mcp/scripts/: example_usage.py  init_db.py  test_connection.py
